# sdk-deploy-template

./: .dockerignore  CHANGELOG.md  Dockerfile  Dockerfile.async  Dockerfile.async.local  Dockerfile.local  README.md
.github/: CODEOWNERS
assistant_demo/: .env.example  README.md  docker-compose.yaml  pyproject.toml
assistant_demo/assistant_demo/: __init__.py  app.py  event_socket.py
assistant_demo_async/: .env.enc  .flaskenv  README.md  docker-compose.yaml  pyproject.toml
assistant_demo_async/assistant_demo_async/: app.py
