[tool.poetry]
name = "assistant_demo_async"
version = "0.1.0"
description = ""
authors = ["Konstantin Krauss <konsti@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
unique-sdk = "^0.9.4"
gunicorn = "^21.2.0"
uvicorn = "^0.30.1"
quart = "^0.19.6"
asyncio = "^3.4.3"
unique-toolkit = "^0.5.11"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
sseclient = "0.0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
